test/types/seq/bradc/emptySeq.good
Error: Invalid empty sequence literal '(//)' (emptySeq.chpl:1)
