test/types/seq/bradc/emptySeq.chpl
var s: seq(integer) = (/ /);

writeln("s is: ", s);
